k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: ${namespace}
spec:
  type: LoadBalancer
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 80
